--- a/Aula/results/log.html
+++ b/Aula/results/log.html
@@ -1799,22 +1799,22 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,34],[],[[4,0,0,[],[1,26,7],[[0,5,6,0,7,8,0,0,[1,26,2],[]],[0,5,6,0,7,9,0,0,[1,28,1],[]],[0,5,6,0,7,10,0,0,[1,29,1],[]],[0,5,6,0,7,11,0,0,[1,30,1],[]],[0,5,6,0,7,12,0,0,[1,32,1],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,35],[],[[4,0,0,[],[1,28,6],[[0,5,0,0,0,6,7,0,[1,29,4],[[8,32,2,8]]],[0,9,10,0,11,12,0,0,[1,33,0],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Exercicio2","*C:\\Users\\T-GAMER\\Desktop\\thiagobkn\\PV\\GIt hub\\Prime\\prime_expert\\aula\\exercicio2.robot","*../exercicio2.robot","*compras","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*\\n${Frutas[0]}","*${Frutas[1]}","*${Frutas[2]}","*${Frutas[3]}","*${Frutas[4]}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Exercicio3","*C:\\Users\\T-GAMER\\Desktop\\thiagobkn\\PV\\GIt hub\\Prime\\prime_expert\\aula\\exercicio3.robot","*../exercicio3.robot","*email","*criação do email","*${pessoa.nome}, ${pessoa.sobrenome}, ${pessoa.idade}, ${pessoa.base_email}","*${email}","*${email} = thiago_bassakin_21@robot.com","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*\\n${email}"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio2","name":"Exercicio2","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio3","name":"Exercicio3","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1634670159195;
+window.output["baseMillis"] = 1634687369124;
 </script>
 <script type="text/javascript">
 window.output["generated"] = 39;
@@ -1823,7 +1823,7 @@ window.output["generated"] = 39;
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
