--- a/Aula/results/report.html
+++ b/Aula/results/report.html
@@ -1628,19 +1628,19 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,34],[],[[4,0,0,[],[1,26,7],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,35],[],[[4,0,0,[],[1,28,6],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Exercicio2","*C:\\Users\\T-GAMER\\Desktop\\thiagobkn\\PV\\GIt hub\\Prime\\prime_expert\\aula\\exercicio2.robot","*../exercicio2.robot","*compras"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Exercicio3","*C:\\Users\\T-GAMER\\Desktop\\thiagobkn\\PV\\GIt hub\\Prime\\prime_expert\\aula\\exercicio3.robot","*../exercicio3.robot","*email"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio2","name":"Exercicio2","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio3","name":"Exercicio3","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1634670159195;
+window.output["baseMillis"] = 1634687369124;
 </script>
 <script type="text/javascript">
 window.output["generated"] = 39;
