--- a/Aula/results/log.html
+++ b/Aula/results/log.html
@@ -1799,31 +1799,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,35],[],[[4,0,0,[],[1,28,6],[[0,5,0,0,0,6,7,0,[1,29,4],[[8,32,2,8]]],[0,9,10,0,11,12,0,0,[1,33,0],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,45],[],[[4,0,0,[],[1,38,6],[[0,5,0,0,0,0,0,0,[1,39,5],[[3,6,0,0,0,0,0,0,[1,40,4],[[4,7,0,0,0,0,0,0,[1,40,1],[[0,8,9,0,10,11,0,0,[1,40,1],[]]]],[4,12,0,0,0,0,0,0,[1,41,1],[[0,8,9,0,10,11,0,0,[1,41,1],[]]]],[4,13,0,0,0,0,0,0,[1,42,0],[[0,8,9,0,10,11,0,0,[1,42,0],[]]]],[4,14,0,0,0,0,0,0,[1,43,0],[[0,8,9,0,10,11,0,0,[1,43,0],[]]]],[4,15,0,0,0,0,0,0,[1,43,1],[[0,8,9,0,10,11,0,0,[1,43,0],[]]]]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Exercicio3","*C:\\Users\\T-GAMER\\Desktop\\thiagobkn\\PV\\GIt hub\\Prime\\prime_expert\\aula\\exercicio3.robot","*../exercicio3.robot","*email","*criação do email","*${pessoa.nome}, ${pessoa.sobrenome}, ${pessoa.idade}, ${pessoa.base_email}","*${email}","*${email} = thiago_bassakin_21@robot.com","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*\\n${email}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Exercicio5","*C:\\Users\\T-GAMER\\Desktop\\thiagobkn\\PV\\GIt hub\\Prime\\prime_expert\\aula\\exercicio5.robot","*../exercicio5.robot","*Inicio","*paises","*${paises} IN [ @{paises} ]","*${paises} = Brasil","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*\\n${paises}","*${paises} = USA","*${paises} = Canada","*${paises} = Alemanha","*${paises} = Russia"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio3","name":"Exercicio3","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio5","name":"Exercicio5","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1634687369124;
+window.output["baseMillis"] = 1634691894464;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 39;
+window.output["generated"] = 51;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
